--- a/DelegatorBot/requirements.txt
+++ b/DelegatorBot/requirements.txt
@@ -24,6 +24,8 @@ Jinja2==3.1.2
 Markdown==3.4.1
 MarkupSafe==2.1.2
 multidict==6.0.4
+plyer==2.1.0
+psycopg2-binary==2.9.5
 PyAudio==0.2.13
 pycparser==2.21
 pydantic==1.10.4
